
  * New upstream snapshot 

  * debian/rules: add some explanatory comments for AUTOPKGTEST_BUILD
  * debian/tests/control.in:
    - make testtools-bridgetest-without-java Architecture: %OOO_NOJAVA_ARCHS%
      only run on archs where Java is disabled (also because on amd64 it fails
      with a full with-Java build tree, like with build-needed tests)

 -- Rene Engelhard <rene@debian.org>  Mon, 23 Sep 2024 18:53:14 +0200

libreoffice (4:24.8.1-2) unstable; urgency=medium

  * upload to unstable

  * debian/rules: don't use <!nocheck> on libcppunit-dev build-dep
    for now since it's (per default) assumed to be there by configure
    used in build-indep and that fails with -Pnocheck 

 -- Rene Engelhard <rene@debian.org>  Sun, 22 Sep 2024 23:40:32 +0200

libreoffice (4:24.8.1-1) experimental; urgency=medium

  * New upstream release

  * debian/rules: split check target into build-tests and check.
    Set BUILD_ONLY_EN_US=y for the build inside autopkgtest
  * debian/control.in, debian/fake-build-tests: handle new autopkgtest
    which does a nocheck build by running build-tests before attempting to
    run the tests. Subject to timeout at 150m/160m. Change mkdir -ps to
    touch since that also works
  * debian/tests/{cppunit-subsequent,slow,unit}check: skip if
    fake-build-tests get timeout (aka skipped)
  * debian/rules, debian/control.{mysql,}.in: ensure the mysql test is
    always last

 -- Rene Engelhard <rene@debian.org>  Wed, 18 Sep 2024 18:14:37 +0200

libreoffice (4:24.8.1~rc1-1) experimental; urgency=medium

  * New upstream release candidate

  * debian/patches/jdk-minimal-and-zero-paths.diff: add new
    minimal/zero JDK paths as of OpenJDK 21, thanks
    WANG Xuerui <i.salsa@xen0n.name> (closes: #1079438).
    Keep Java disabled on armel though for consistency with armhf
  * debian/patches/moreIconsDialog-accesses-internet.diff: fix logic
  * debian/tests/control.in: go sure and add needs-internet restriction here,