@@ -113,29 +113,30 @@ Features: test-name=apparmor-profiles-syntax-check
 Depends: libreoffice-common, apparmor
 Restrictions: allow-stderr, superficial
 
-## fake test to build the tests for the following ones
-#Tests: fake-build-tests
-#Architecture: amd64 arm64 armhf
-#Depends: @builddeps@, libreoffice,libreoffice-core,libreoffice-common,libreoffice-java-common,libreoffice-writer,libreoffice-calc,libreoffice-impress,libreoffice-draw,libreoffice-math,libreoffice-base-core,libreoffice-base,libreoffice-style-breeze,libreoffice-style-colibre,libreoffice-style-sifr,libreoffice-style-elementary,libreoffice-style-karasa-jaga,libreoffice-style-sukapura,libreoffice-gnome,python3-uno,libreoffice-script-provider-python,libreoffice-script-provider-bsh,libreoffice-script-provider-js,libreoffice-sdbc-hsqldb,libreoffice-sdbc-mysql,libreoffice-base-drivers,python3-access2base,python3-scriptforge,libofficebean-java,libreoffice-uiconfig-common,libreoffice-uiconfig-base,libreoffice-uiconfig-calc,libreoffice-uiconfig-draw,libreoffice-uiconfig-impress,libreoffice-uiconfig-math,libreoffice-uiconfig-writer,uno-libs-private,libuno-sal3t64,libuno-cppu3t64,ure,ure-java,libunoloader-java,liblibreoffice-java,libreoffice-wiki-publisher,libreoffice-report-builder,libreoffice-report-builder-bin,libreoffice-uiconfig-report-builder,libreoffice-nlpsolver,fonts-opensymbol,libreoffice-dev,libreoffice-dev-gui,libreoffice-dev-common,libreofficekit-dev,libreoffice-gtk3,gir1.2-lokdocview-0.1,liblibreofficekitgtk,libreofficekit-data,libreoffice-gtk4,libreoffice-kf5,libreoffice-kf6,libreoffice-qt5,libreoffice-qt6,libreoffice-plasma,libreoffice-sdbc-postgresql,libreoffice-evolution,libreoffice-subsequentcheckbase,libreoffice-smoketest-data,libreoffice-librelogo,libreoffice-sdbc-firebird
-#Restrictions: build-needed, rw-build-tree, allow-stderr, superficial, skippable
-#
-#Tests: cppunit-subsequentcheck
-#Architecture: amd64 arm64 armhf
-#Depends: @builddeps@, libreoffice,libreoffice-core,libreoffice-common,libreoffice-java-common,libreoffice-writer,libreoffice-calc,libreoffice-impress,libreoffice-draw,libreoffice-math,libreoffice-base-core,libreoffice-base,libreoffice-style-breeze,libreoffice-style-colibre,libreoffice-style-sifr,libreoffice-style-elementary,libreoffice-style-karasa-jaga,libreoffice-style-sukapura,libreoffice-gnome,python3-uno,libreoffice-script-provider-python,libreoffice-script-provider-bsh,libreoffice-script-provider-js,libreoffice-sdbc-hsqldb,libreoffice-sdbc-mysql,libreoffice-base-drivers,python3-access2base,python3-scriptforge,libofficebean-java,libreoffice-uiconfig-common,libreoffice-uiconfig-base,libreoffice-uiconfig-calc,libreoffice-uiconfig-draw,libreoffice-uiconfig-impress,libreoffice-uiconfig-math,libreoffice-uiconfig-writer,uno-libs-private,libuno-sal3t64,libuno-cppu3t64,ure,ure-java,libunoloader-java,liblibreoffice-java,libreoffice-wiki-publisher,libreoffice-report-builder,libreoffice-report-builder-bin,libreoffice-uiconfig-report-builder,libreoffice-nlpsolver,fonts-opensymbol,libreoffice-dev,libreoffice-dev-gui,libreoffice-dev-common,libreofficekit-dev,libreoffice-gtk3,gir1.2-lokdocview-0.1,liblibreofficekitgtk,libreofficekit-data,libreoffice-gtk4,libreoffice-kf5,libreoffice-kf6,libreoffice-qt5,libreoffice-qt6,libreoffice-plasma,libreoffice-sdbc-postgresql,libreoffice-evolution,libreoffice-subsequentcheckbase,libreoffice-smoketest-data,libreoffice-librelogo,libreoffice-sdbc-firebird
-#Restrictions: build-needed, rw-build-tree, allow-stderr, skippable
-#
-## Those tests even work when there is no /usr/lib/libreoffice there in any way. @builddeps@ is enough.
-## That strictly violates the autopkgtest stuff thus mark them as superficial. But if a library
-## or whatever update broke it we should know
-#Tests: slowcheck
-#Architecture: amd64 arm64 armhf
-#Depends: @builddeps@, libreoffice,libreoffice-core,libreoffice-common,libreoffice-java-common,libreoffice-writer,libreoffice-calc,libreoffice-impress,libreoffice-draw,libreoffice-math,libreoffice-base-core,libreoffice-base,libreoffice-style-breeze,libreoffice-style-colibre,libreoffice-style-sifr,libreoffice-style-elementary,libreoffice-style-karasa-jaga,libreoffice-style-sukapura,libreoffice-gnome,python3-uno,libreoffice-script-provider-python,libreoffice-script-provider-bsh,libreoffice-script-provider-js,libreoffice-sdbc-hsqldb,libreoffice-sdbc-mysql,libreoffice-base-drivers,python3-access2base,python3-scriptforge,libofficebean-java,libreoffice-uiconfig-common,libreoffice-uiconfig-base,libreoffice-uiconfig-calc,libreoffice-uiconfig-draw,libreoffice-uiconfig-impress,libreoffice-uiconfig-math,libreoffice-uiconfig-writer,uno-libs-private,libuno-sal3t64,libuno-cppu3t64,ure,ure-java,libunoloader-java,liblibreoffice-java,libreoffice-wiki-publisher,libreoffice-report-builder,libreoffice-report-builder-bin,libreoffice-uiconfig-report-builder,libreoffice-nlpsolver,fonts-opensymbol,libreoffice-dev,libreoffice-dev-gui,libreoffice-dev-common,libreofficekit-dev,libreoffice-gtk3,gir1.2-lokdocview-0.1,liblibreofficekitgtk,libreofficekit-data,libreoffice-gtk4,libreoffice-kf5,libreoffice-kf6,libreoffice-qt5,libreoffice-qt6,libreoffice-plasma,libreoffice-sdbc-postgresql,libreoffice-evolution,libreoffice-subsequentcheckbase,libreoffice-smoketest-data,libreoffice-librelogo,libreoffice-sdbc-firebird
-#Restrictions: build-needed, rw-build-tree, allow-stderr, superficial, skippable
-#
-#Tests: unitcheck
-#Architecture: amd64 arm64 armhf
-#Depends: @builddeps@, libreoffice,libreoffice-core,libreoffice-common,libreoffice-java-common,libreoffice-writer,libreoffice-calc,libreoffice-impress,libreoffice-draw,libreoffice-math,libreoffice-base-core,libreoffice-base,libreoffice-style-breeze,libreoffice-style-colibre,libreoffice-style-sifr,libreoffice-style-elementary,libreoffice-style-karasa-jaga,libreoffice-style-sukapura,libreoffice-gnome,python3-uno,libreoffice-script-provider-python,libreoffice-script-provider-bsh,libreoffice-script-provider-js,libreoffice-sdbc-hsqldb,libreoffice-sdbc-mysql,libreoffice-base-drivers,python3-access2base,python3-scriptforge,libofficebean-java,libreoffice-uiconfig-common,libreoffice-uiconfig-base,libreoffice-uiconfig-calc,libreoffice-uiconfig-draw,libreoffice-uiconfig-impress,libreoffice-uiconfig-math,libreoffice-uiconfig-writer,uno-libs-private,libuno-sal3t64,libuno-cppu3t64,ure,ure-java,libunoloader-java,liblibreoffice-java,libreoffice-wiki-publisher,libreoffice-report-builder,libreoffice-report-builder-bin,libreoffice-uiconfig-report-builder,libreoffice-nlpsolver,fonts-opensymbol,libreoffice-dev,libreoffice-dev-gui,libreoffice-dev-common,libreofficekit-dev,libreoffice-gtk3,gir1.2-lokdocview-0.1,liblibreofficekitgtk,libreofficekit-data,libreoffice-gtk4,libreoffice-kf5,libreoffice-kf6,libreoffice-qt5,libreoffice-qt6,libreoffice-plasma,libreoffice-sdbc-postgresql,libreoffice-evolution,libreoffice-subsequentcheckbase,libreoffice-smoketest-data,libreoffice-librelogo,libreoffice-sdbc-firebird
-#Restrictions: build-needed, rw-build-tree, allow-stderr, superficial, skippable
+# fake test to build the tests for the following ones since autopkgtests
+# build-needed builds with nocheck and thus they are not built.
+Tests: fake-build-tests
+Architecture: amd64
+Depends: @builddeps@, libreoffice,libreoffice-core,libreoffice-common,libreoffice-java-common,libreoffice-writer,libreoffice-calc,libreoffice-impress,libreoffice-draw,libreoffice-math,libreoffice-base-core,libreoffice-base,libreoffice-style-breeze,libreoffice-style-colibre,libreoffice-style-sifr,libreoffice-style-elementary,libreoffice-style-karasa-jaga,libreoffice-style-sukapura,libreoffice-gnome,python3-uno,libreoffice-script-provider-python,libreoffice-script-provider-bsh,libreoffice-script-provider-js,libreoffice-sdbc-hsqldb,libreoffice-sdbc-mysql,libreoffice-base-drivers,python3-access2base,python3-scriptforge,libofficebean-java,libreoffice-uiconfig-common,libreoffice-uiconfig-base,libreoffice-uiconfig-calc,libreoffice-uiconfig-draw,libreoffice-uiconfig-impress,libreoffice-uiconfig-math,libreoffice-uiconfig-writer,uno-libs-private,libuno-sal3t64,libuno-cppu3t64,ure,ure-java,libunoloader-java,liblibreoffice-java,libreoffice-wiki-publisher,libreoffice-report-builder,libreoffice-report-builder-bin,libreoffice-uiconfig-report-builder,libreoffice-nlpsolver,fonts-opensymbol,libreoffice-dev,libreoffice-dev-gui,libreoffice-dev-common,libreofficekit-dev,libreoffice-gtk3,gir1.2-lokdocview-0.1,liblibreofficekitgtk,libreofficekit-data,libreoffice-gtk4,libreoffice-kf5,libreoffice-kf6,libreoffice-qt5,libreoffice-qt6,libreoffice-plasma,libreoffice-sdbc-postgresql,libreoffice-evolution,libreoffice-subsequentcheckbase,libreoffice-smoketest-data,libreoffice-librelogo,libreoffice-sdbc-firebird
+Restrictions: build-needed, rw-build-tree, allow-stderr, superficial, skippable
+
+Tests: cppunit-subsequentcheck
+Architecture: amd64
+Depends: @builddeps@, libreoffice,libreoffice-core,libreoffice-common,libreoffice-java-common,libreoffice-writer,libreoffice-calc,libreoffice-impress,libreoffice-draw,libreoffice-math,libreoffice-base-core,libreoffice-base,libreoffice-style-breeze,libreoffice-style-colibre,libreoffice-style-sifr,libreoffice-style-elementary,libreoffice-style-karasa-jaga,libreoffice-style-sukapura,libreoffice-gnome,python3-uno,libreoffice-script-provider-python,libreoffice-script-provider-bsh,libreoffice-script-provider-js,libreoffice-sdbc-hsqldb,libreoffice-sdbc-mysql,libreoffice-base-drivers,python3-access2base,python3-scriptforge,libofficebean-java,libreoffice-uiconfig-common,libreoffice-uiconfig-base,libreoffice-uiconfig-calc,libreoffice-uiconfig-draw,libreoffice-uiconfig-impress,libreoffice-uiconfig-math,libreoffice-uiconfig-writer,uno-libs-private,libuno-sal3t64,libuno-cppu3t64,ure,ure-java,libunoloader-java,liblibreoffice-java,libreoffice-wiki-publisher,libreoffice-report-builder,libreoffice-report-builder-bin,libreoffice-uiconfig-report-builder,libreoffice-nlpsolver,fonts-opensymbol,libreoffice-dev,libreoffice-dev-gui,libreoffice-dev-common,libreofficekit-dev,libreoffice-gtk3,gir1.2-lokdocview-0.1,liblibreofficekitgtk,libreofficekit-data,libreoffice-gtk4,libreoffice-kf5,libreoffice-kf6,libreoffice-qt5,libreoffice-qt6,libreoffice-plasma,libreoffice-sdbc-postgresql,libreoffice-evolution,libreoffice-subsequentcheckbase,libreoffice-smoketest-data,libreoffice-librelogo,libreoffice-sdbc-firebird
+Restrictions: build-needed, rw-build-tree, allow-stderr, skippable
+
+# Those tests even work when there is no /usr/lib/libreoffice there in any way. @builddeps@ is enough.
+# That strictly violates the autopkgtest stuff thus mark them as superficial. But if a library
+# or whatever update broke it we should know
+Tests: slowcheck
+Architecture: amd64
+Depends: @builddeps@, libreoffice,libreoffice-core,libreoffice-common,libreoffice-java-common,libreoffice-writer,libreoffice-calc,libreoffice-impress,libreoffice-draw,libreoffice-math,libreoffice-base-core,libreoffice-base,libreoffice-style-breeze,libreoffice-style-colibre,libreoffice-style-sifr,libreoffice-style-elementary,libreoffice-style-karasa-jaga,libreoffice-style-sukapura,libreoffice-gnome,python3-uno,libreoffice-script-provider-python,libreoffice-script-provider-bsh,libreoffice-script-provider-js,libreoffice-sdbc-hsqldb,libreoffice-sdbc-mysql,libreoffice-base-drivers,python3-access2base,python3-scriptforge,libofficebean-java,libreoffice-uiconfig-common,libreoffice-uiconfig-base,libreoffice-uiconfig-calc,libreoffice-uiconfig-draw,libreoffice-uiconfig-impress,libreoffice-uiconfig-math,libreoffice-uiconfig-writer,uno-libs-private,libuno-sal3t64,libuno-cppu3t64,ure,ure-java,libunoloader-java,liblibreoffice-java,libreoffice-wiki-publisher,libreoffice-report-builder,libreoffice-report-builder-bin,libreoffice-uiconfig-report-builder,libreoffice-nlpsolver,fonts-opensymbol,libreoffice-dev,libreoffice-dev-gui,libreoffice-dev-common,libreofficekit-dev,libreoffice-gtk3,gir1.2-lokdocview-0.1,liblibreofficekitgtk,libreofficekit-data,libreoffice-gtk4,libreoffice-kf5,libreoffice-kf6,libreoffice-qt5,libreoffice-qt6,libreoffice-plasma,libreoffice-sdbc-postgresql,libreoffice-evolution,libreoffice-subsequentcheckbase,libreoffice-smoketest-data,libreoffice-librelogo,libreoffice-sdbc-firebird
+Restrictions: build-needed, rw-build-tree, allow-stderr, superficial, skippable
+
+Tests: unitcheck
+Architecture: amd64
+Depends: @builddeps@, libreoffice,libreoffice-core,libreoffice-common,libreoffice-java-common,libreoffice-writer,libreoffice-calc,libreoffice-impress,libreoffice-draw,libreoffice-math,libreoffice-base-core,libreoffice-base,libreoffice-style-breeze,libreoffice-style-colibre,libreoffice-style-sifr,libreoffice-style-elementary,libreoffice-style-karasa-jaga,libreoffice-style-sukapura,libreoffice-gnome,python3-uno,libreoffice-script-provider-python,libreoffice-script-provider-bsh,libreoffice-script-provider-js,libreoffice-sdbc-hsqldb,libreoffice-sdbc-mysql,libreoffice-base-drivers,python3-access2base,python3-scriptforge,libofficebean-java,libreoffice-uiconfig-common,libreoffice-uiconfig-base,libreoffice-uiconfig-calc,libreoffice-uiconfig-draw,libreoffice-uiconfig-impress,libreoffice-uiconfig-math,libreoffice-uiconfig-writer,uno-libs-private,libuno-sal3t64,libuno-cppu3t64,ure,ure-java,libunoloader-java,liblibreoffice-java,libreoffice-wiki-publisher,libreoffice-report-builder,libreoffice-report-builder-bin,libreoffice-uiconfig-report-builder,libreoffice-nlpsolver,fonts-opensymbol,libreoffice-dev,libreoffice-dev-gui,libreoffice-dev-common,libreofficekit-dev,libreoffice-gtk3,gir1.2-lokdocview-0.1,liblibreofficekitgtk,libreofficekit-data,libreoffice-gtk4,libreoffice-kf5,libreoffice-kf6,libreoffice-qt5,libreoffice-qt6,libreoffice-plasma,libreoffice-sdbc-postgresql,libreoffice-evolution,libreoffice-subsequentcheckbase,libreoffice-smoketest-data,libreoffice-librelogo,libreoffice-sdbc-firebird
+Restrictions: build-needed, rw-build-tree, allow-stderr, superficial, skippable
 
 Tests: junit-subsequentcheck
 Architecture: amd64 arm64
