@@ -7,6 +7,8 @@ libreoffice (4:24.8.2~rc1-1) experimental; urgency=medium
     - make testtools-bridgetest-without-java Architecture: %OOO_NOJAVA_ARCHS%
       only run on archs where Java is disabled (also because on amd64 it fails
       with a full with-Java build tree, like with build-needed tests)
+    - enable most of the build-needed tests: fake-build-tests,
+      cppunit-subsequentcheck, slowcheck, unitcheck (amd64 only)
 
  -- Rene Engelhard <rene@debian.org>  Mon, 23 Sep 2024 18:53:14 +0200
 
